* added CONTRIBUTING.md